AC_INIT(libexif-gtk/gtk-exif-browser.c)
AM_CONFIG_HEADER(config.h)
AM_INIT_AUTOMAKE(libexif-gtk, 0.2.0)
AM_MAINTAINER_MODE

dnl ---------------------------------------------------------------------------
dnl Versioning (libexif-gtk-AGE.CURRENT.REVISION):
dnl  - AGE (Micro):      Increment if any interfaces have been added; set to 0
dnl                      if any interfaces have been removed. Removal has 
dnl                      precedence over adding, so set to 0 if both happened.
dnl  - REVISION (Minor): Increment any time the source changes; set to 
dnl                      0 if you incremented CURRENT.
dnl  - CURRENT (Major):  Increment if the interface has additions, changes,
dnl                      removals.
dnl ---------------------------------------------------------------------------
LIBEXIF_GTK_AGE=0
LIBEXIF_GTK_REVISION=0
LIBEXIF_GTK_CURRENT=2
AC_SUBST(LIBEXIF_GTK_AGE)
AC_SUBST(LIBEXIF_GTK_REVISION)
AC_SUBST(LIBEXIF_GTK_CURRENT)

AM_PROG_LIBTOOL

dnl ---------------------------------------------------------------------------
dnl i18n support
dnl ---------------------------------------------------------------------------
dnl ALL_LINGUAS=""
dnl AM_GNU_GETTEXT

dnl ---------------------------------------------------------------------------
dnl libraries needed
dnl ---------------------------------------------------------------------------
PKG_CHECK_MODULES(LIBEXIF_GTK, gtk libexif >= 0.5.0)
AC_SUBST(LIBEXIF_GTK_LIBS)
AC_SUBST(LIBEXIF_GTK_CFLAGS)
PKG_CHECK_MODULES(GTK, gtk)
AC_SUBST(GTK_LIBS)
AC_SUBST(GTK_CFLAGS)

dnl ---------------------------------------------------------------------------
dnl gdk-pixbuf
dnl ---------------------------------------------------------------------------
AC_PATH_PROG(GDK_PIXBUF_CONFIG,gdk-pixbuf-config)
if test -n "${GDK_PIXBUF_CONFIG}"; then
	GDK_PIXBUF_CFLAGS=`$GDK_PIXBUF_CONFIG --cflags`
	GDK_PIXBUF_LIBS=`$GDK_PIXBUF_CONFIG --libs`
	AC_DEFINE(HAVE_GDK_PIXBUF)
fi
AC_SUBST(GDK_PIXBUF_CFLAGS)
AC_SUBST(GDK_PIXBUF_LIBS)

CFLAGS="$CFLAGS -Wall -Wchar-subscripts -Wmissing-declarations -Wmissing-prototypes -Wnested-externs -Wpointer-arith -Werror"
AC_SUBST(CFLAGS)

AC_OUTPUT([
  Makefile
  libexif-gtk/Makefile
  libexif-gtk/libexif-gtk.pc
  gtk-extensions/Makefile
])
